--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -28,7 +28,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '45c7985b-5adb-4c86-b2c8-6183bd61d2ad',
-        'scope':  'provider/Patient.read provider/Observation.read launch online_access openid profile'
+        'scope':  'provider/Patient.read provider/Observation.read patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
